# hpc-labs

./: .gitignore  CMakeLists.txt  HPC - TBB - Parallel for and tasks.html  HPC - TBB lab 2 - parallel do & thread local.html  HPC.code-workspace  TO_IMPLEMENT.txt  forloop.out  hpc_tbb_lab_01.ipynb  laplace-common.cpp  laplace-par-async.cpp  laplace-par-sync-reduce.cpp  laplace-par-sync.cpp  laplace-seq.cpp  nqueen.py  nqueens.out  nqueens_count.cpp  nqueens_report.cpp  parfor.cpp  parfor_count.cpp  parfor_stats.cpp  run.batch  send_jobs.py  shortest_path.cpp  tasks-fib.cpp
.devcontainer/: Dockerfile  devcontainer.json
lab1/: CMakeLists.txt  hello_world.cpp  main.cpp
lab10/: HPC - MPI - optimizations of supercomputer code.html  blas-dmmmult.cpp  laplace-common.cpp  laplace-common.h
lab2/: CMakeLists.txt  compress.txt  decompress.txt  dft.cpp  total.txt
lab2/lab2/: compress.txt  decompress.txt  dft.cpp  total.txt
lab2/utils/: bmp.cpp
lab3/: CMakeLists.txt  cpu_time.txt  device_transfer.txt  gpu_time.txt  mem_transfer.txt  stencil.cu
lab4/: CMakeLists.txt  main.cu
lab4/raytrace/: raytrace.cu  raytrace1.cu  raytrace2.cu  raytrace3.cu
lab4/synchro/: sharedsum.cu
lab5/streams/: double.cu  quad.cu
lab6/: commands-container.txt  report.ipynb  transpose.cu  transpose_bad.cu  transpose_less.cu  transpose_optimised.cu
lab7/: Makefile  benchmark  benchmark.cpp  draw-bandwidth.ipynb  hello-world-seq.c  res.txt  res.txt.bak  res.txt.final  ring.c
lab8/: Makefile  floyd-warshall-par.cpp  graph-utils-par.cpp  out2  run.batch  script.run  send_jobs.py  seq.batch
lab8/res/: fl-1-1024.err  fl-16-128.err  fl-2-1024.err  fl-2-16.err  fl-8-1024.err  fl-8-16.err  fl-8-512.err  fl-seq-1024.err  fl-seq-16.err  fl-seq-2048.err  fl-seq-4096.err  fl-seq-512.err  gather_results.py
res/: fl-1-128.err  fl-1-16.err  fl-1-512.err  fl-16-1024.err  fl-16-16.err  fl-16-512.err  fl-2-128.err  fl-2-512.err  fl-4-1024.err  fl-4-128.err  fl-4-16.err  fl-4-512.err  fl-8-128.err  fl-seq-128.err
